fix: letter-spacing and fon-size of headings

--- a/extended-normalize.css
+++ b/extended-normalize.css
@@ -9,7 +9,6 @@
 *::after {
   padding: 0;
   margin-top: 0;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -20,7 +19,7 @@
   --accentColor: #286ce9;
   --bodyFont: arial, verdana, Tahoma, sans-serif;
   --headingFont: "Lucida Bright", Georgia, serif;
-  line-height: 1.3;
+  line-height: 1.25; /*125% of the font-size*/
 }
 
 body {
@@ -41,23 +40,36 @@ h6 {
 }
 
 h1 {
-  font-size: 2.7rem;
-  font-weight: 800;
+  font-size: 6rem;
+  letter-spacing: -1.5px;
+  font-weight: bold;
 }
 
 h2 {
-  font-size: 2.1rem;
-  font-weight: 600;
+  font-size: 3.75rem;
+  letter-spacing: -0.5px;
+  font-weight: bold;
 }
 
 h3 {
-  font-size: 1.5rem;
-  font-weight: 500;
+  font-size: 3rem;
+  font-weight: bold;
 }
 
 h4 {
-  font-size: 1.3rem;
-  font-weight: 500;
+  font-size: 2.125rem;
+  font-weight: medium;
+}
+
+h5{
+  font-size: 1.5rem;
+  font-weight: medium;
+}
+
+h6{
+  font-size: 1.25rem;
+  letter-spacing: 0.5px;
+  font-weight: medium;
 }
 
 
@@ -93,7 +105,6 @@ kbd {
   padding: 0.25rem;
   border: 1px solid var(--primaryTextColor);
   border-radius: 0.25rem;
-  -webkit-box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.4);
   box-shadow: 0 3px 6px -3px rgba(0, 0, 0, 0.4);
 }
 
@@ -167,12 +178,28 @@ button {
   transition: transform 0.3s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
+[type="submit"]::after, button::after, [type="reset"]::after{
+  content: "";
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, .4);
+  transition: opacity 0.3s ease-in-out;
+	
+}
+
 [type="submit"]:hover,
 button:hover,
 [type="submit"]:focus,
 button:focus {
-  transform: scaleX(1.1) translateY(0.25rem);
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4);
+  transform: scaleX(1.1);
+}
+
+[type="submit"]:hover::after, button:hover::after, [type="reset"]:hover::after{
+  opacity: 1;
 }
 
 [type="submit"]:active,
@@ -182,7 +209,7 @@ button:active {
 
 [type="submit"]:disabled,
 button:disabled {
-  transform: scaleX(0) translateY(0);
+  transform: scaleX(0);
   background-color: #c3c3c3;
   color: #818080;
   box-shadow: none;
